# hieronymusv2

./: .gitignore  Cargo.toml  README.md  config.toml
src/: auth.rs  config.rs  data.rs  main.rs  net.rs  nom.rs  server.rs  tui.rs  varint.rs
src/config/: default_config.toml
src/net/: auth.rs  handshake.rs  login.rs  play.rs  status.rs
src/net/play/: nbt.rs
src/server/: dimension.rs
