[package]
name = "hieronymusv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
color-eyre = "0.5.11"
eyre = "0.6.5"
nom = "7.1.0"
nom-derive = "0.10.0"
parking_lot = "0.11.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["net", "macros", "rt", "sync", "rt-multi-thread", "io-util"] }
tracing = "0.1.29"
tracing-error = "0.2.0"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
uuid = "0.8.2"

[features]
